comment featured users

--- a/src/app/public-documents/solution/solution.component.html
+++ b/src/app/public-documents/solution/solution.component.html
@@ -4,7 +4,7 @@
 
 <div class="container" *ngIf="isDataAvailable">
   <div class="container">
-    <div class="set-7">
+    <div class="set-10">
       <breadcrumbs-component>
         <li>...</li>
         <li
@@ -60,9 +60,9 @@
         <li>{{ solution.shortTitle }}</li>
       </breadcrumbs-component>
     </div>
-    <div class="set-3 featured-users">
+    <!-- <div class="set-3 featured-users">
       <featured-users [inputAmount]="3"></featured-users>
-    </div>
+    </div> -->
 
     <div class="set-2 txt-center">
       <button type="button" mat-mini-fab color="primary" class="mini" matTooltip="Agregar Comentario"
