--- a/src/app/public-documents/subcategory/subcategory.component.html
+++ b/src/app/public-documents/subcategory/subcategory.component.html
@@ -5,7 +5,7 @@
 <div class="set-12" *ngIf="isDataAvailable">
   <div class="container">
     <div class="set-12">
-      <div class="set-8" *ngIf="isDataAvailable">
+      <div class="set-12" *ngIf="isDataAvailable">
         <breadcrumbs-component>
           <li>Documentos</li>
           <li (click)="
@@ -26,9 +26,9 @@
           <li>{{ subcategory.category.name }}</li>
         </breadcrumbs-component>
       </div>
-      <div class="set-4 featured-users">
+      <!-- <div class="set-4 featured-users">
         <featured-users [inputAmount]="5"></featured-users>
-      </div>
+      </div> -->
     </div>
 
     <div class="set-12" style="padding-bottom: 100px; margin-top: 20px" *ngIf="subcategory">
