fix: bread y texto problemas y soluciones

--- a/src/app/public-documents/subcategory/subcategory.component.scss
+++ b/src/app/public-documents/subcategory/subcategory.component.scss
@@ -132,9 +132,10 @@
     font-weight: 600;
     border-radius: 4px;
   }
-  .catbtn-2:hover{
-    text-decoration: underline solid rgba(0,0,0,0.87) 4px;
+  .color{
+    color: #71f5ad;
   }
+ 
 }
 
 .table-head {
