--- a/src/app/public-documents/components/solutions-card/solutions-card.component.scss
+++ b/src/app/public-documents/components/solutions-card/solutions-card.component.scss
@@ -30,9 +30,7 @@
     font-size: 15px;
     font-weight: 600;
     border-radius: 4px;
-  }
-  .catbtn-2:hover{
-    text-decoration: underline solid #71f5ad 4px;
+    color: #71f5ad;
   }
 }
 .table-head {
