--- a/src/app/public-documents/subcategory/subcategory.component.html
+++ b/src/app/public-documents/subcategory/subcategory.component.html
@@ -117,7 +117,7 @@
                 <td mat-cell *matCellDef="let element">
                   <button
                     type="button"
-                    class="catbtn-2"
+                    class="catbtn-2 color"
                     (click)="redirectSolution(element._id)"
                   >
                     {{ element.title }}
