--- a/src/app/public-documents/category/category.component.html
+++ b/src/app/public-documents/category/category.component.html
@@ -72,13 +72,12 @@
           <mat-form-field appearance="outline">
             <mat-label>Cobertura</mat-label>
             <mat-select>
-              <mat-option value="all">
-                <small>Nacional</small>
-              </mat-option>
-              <mat-option> Municipio 1 </mat-option>
-              <mat-option> Municipio 2 </mat-option>
-              <mat-option> Municipio 3 </mat-option>
-              <mat-option> Municipio 4 </mat-option>
+              <mat-option value="all"> <small>nacional</small></mat-option>
+              <mat-option
+                *ngFor="let location of coverage"
+                value="location.name"
+                >{{ location.name }}</mat-option
+              >
             </mat-select>
           </mat-form-field>
         </div>
