--- a/src/app/public-documents/components/expanded-text/expanded-text.component.scss
+++ b/src/app/public-documents/components/expanded-text/expanded-text.component.scss
@@ -1,4 +1,5 @@
-.card-description {
+:host {
+  .card-description {
     font-weight: 400;
     font-size: 11pt;
     text-align: justify;
@@ -13,3 +14,4 @@
       cursor: pointer;
     }
   }
+}
