--- a/src/app/public-documents/components/modal-desciption/modal-desciption.component.scss
+++ b/src/app/public-documents/components/modal-desciption/modal-desciption.component.scss
@@ -19,5 +19,10 @@
   .body {
     width: 100%;
     height: 330px;
+    line-height: 25px;
+
+    .text {
+      padding-bottom: 60px;
+    }
   }
 }
