--- a/src/app/public-documents/components/modal-permission/modal-permission.component.scss
+++ b/src/app/public-documents/components/modal-permission/modal-permission.component.scss
@@ -1,101 +1,102 @@
-.modalContainer {
-  background-color: #ffffff;
-  width: 708px;
-  height: 432px;
-  position: absolute;
-  left: 30%;
-  right: 30%;
-  top: 30%;
-  bottom: 30%;
-}
-
-.titleContainer {
-  position: absolute;
-  height: 30px;
-  left: 16px;
-  right: 54px;
-  top: 12px;
-  width: 638px;
-  height: 30px;
-  display: flex;
-  align-items: center;
-  text-align: center;
-  p {
-    font-style: normal;
-    font-weight: 700;
-    font-size: 22px;
-    line-height: 30px;
+:host {
+  .modalContainer {
+    background-color: #ffffff;
+    width: 708px;
+    height: 432px;
+    position: absolute;
+    left: 30%;
+    right: 30%;
+    top: 30%;
+    bottom: 30%;
   }
-}
-img {
-  position: absolute;
-  left: 670px;
-  top: 16px;
-}
-.modalBody {
-  position: absolute;
-  width: 643px;
-  height: min-content;
-  margin-top: 62px;
-  margin-left: 33px;
-  margin-right: 32px;
-  p {
-    font-style: normal;
-    font-weight: 600;
-    font-size: 14px;
-    line-height: 16px;
-    letter-spacing: 0.01em;
-  }
-  form {
-    input {
-      border: 1px solid #636363;
-      border-radius: 8px;
-      width: 100%;
-    }
-    label {
-      position: absolute;
-      // font-family: "Noto Sans";
-      font-style: normal;
-      font-weight: 400;
-      font-size: 14px;
-      line-height: 16px;
-      color: #a5a5a5;
-    }
-    margin-top: 16px;
-    .descriptionInput {
-      font-style: normal;
-      font-weight: 400;
-      font-size: 14px;
-      line-height: 16px;
-      color: #a5a5a5;
-      height: 169px;
-      border: 1px solid #636363;
-      border-radius: 8px;
-      width: 100%;
-      padding-top: 16px;
-      padding-left: 16px;
 
-    }
-    .emailInput {
+  .titleContainer {
+    position: absolute;
+    height: 30px;
+    left: 16px;
+    right: 54px;
+    top: 12px;
+    width: 638px;
+    height: 30px;
+    display: flex;
+    align-items: center;
+    text-align: center;
+    p {
       font-style: normal;
-      font-weight: 400;
+      font-weight: 700;
+      font-size: 22px;
+      line-height: 30px;
+    }
+  }
+  img {
+    position: absolute;
+    left: 670px;
+    top: 16px;
+  }
+  .modalBody {
+    position: absolute;
+    width: 643px;
+    height: min-content;
+    margin-top: 62px;
+    margin-left: 33px;
+    margin-right: 32px;
+    p {
+      font-style: normal;
+      font-weight: 600;
       font-size: 14px;
       line-height: 16px;
-      color: #a5a5a5;
-      margin-top: 23px;
-      height: 45px;
-      padding-left: 12px;
+      letter-spacing: 0.01em;
     }
-    button {
-      position: absolute;
-      left: 246px;
-      background: #ffffff;
-      width: 149px;
-      height: 35px;
-      margin-top: 32px;
-      border: 1px solid #a5a5a5;
-      border-radius: 5px;
-      color: #a5a5a5;
+    form {
+      input {
+        border: 1px solid #636363;
+        border-radius: 8px;
+        width: 100%;
+      }
+      label {
+        position: absolute;
+        // font-family: "Noto Sans";
+        font-style: normal;
+        font-weight: 400;
+        font-size: 14px;
+        line-height: 16px;
+        color: #a5a5a5;
+      }
+      margin-top: 16px;
+      .descriptionInput {
+        font-style: normal;
+        font-weight: 400;
+        font-size: 14px;
+        line-height: 16px;
+        color: #a5a5a5;
+        height: 169px;
+        border: 1px solid #636363;
+        border-radius: 8px;
+        width: 100%;
+        padding-top: 16px;
+        padding-left: 16px;
+      }
+      .emailInput {
+        font-style: normal;
+        font-weight: 400;
+        font-size: 14px;
+        line-height: 16px;
+        color: #a5a5a5;
+        margin-top: 23px;
+        height: 45px;
+        padding-left: 12px;
+      }
+      button {
+        position: absolute;
+        left: 246px;
+        background: #ffffff;
+        width: 149px;
+        height: 35px;
+        margin-top: 32px;
+        border: 1px solid #a5a5a5;
+        border-radius: 5px;
+        color: #a5a5a5;
+      }
     }
   }
 }
