--- a/src/app/public-documents/components/modal-votes/modal-votes.component.scss
+++ b/src/app/public-documents/components/modal-votes/modal-votes.component.scss
@@ -1,44 +1,46 @@
-.modal-container {
-  width: 450px;
-  max-height: 200px;
-  background: white;
-  border-radius: 7px;
-  bottom: 200px;
-  overflow: hidden;
-}
-.modal-head {
-  width: 100%;
-  height: 60px;
-  top: 20px;
-  left: 10%;
-
-  .title {
-    position: relative;
-    left: 20px;
-    top: 25px;
-    font-size: 16px;
+:host {
+  .modal-container {
+    width: 450px;
+    max-height: 200px;
+    background: white;
+    border-radius: 7px;
+    bottom: 200px;
+    overflow: hidden;
   }
-  .cancel {
-    position: relative;
-    top: -12px;
-    left: 400px;
-  }
-}
-.modal-body {
-  width: 100%;
-  height: 70px;
-  top: 20px;
-  .table-container {
+  .modal-head {
     width: 100%;
-    height: 100%;
-    margin-top: 20px;
+    height: 60px;
+    top: 20px;
+    left: 10%;
+
+    .title {
+      position: relative;
+      left: 20px;
+      top: 25px;
+      font-size: 16px;
+    }
+    .cancel {
+      position: relative;
+      top: -12px;
+      left: 400px;
+    }
   }
-}
-.modal-footer {
-  width: 100%;
-  height: 80px;
-  .button {
-    left: 350px;
-    top: 12px;
+  .modal-body {
+    width: 100%;
+    height: 70px;
+    top: 20px;
+    .table-container {
+      width: 100%;
+      height: 100%;
+      margin-top: 20px;
+    }
+  }
+  .modal-footer {
+    width: 100%;
+    height: 80px;
+    .button {
+      left: 350px;
+      top: 12px;
+    }
   }
 }
