--- a/src/app/public-documents/components/testimonials/testimonials.component.scss
+++ b/src/app/public-documents/components/testimonials/testimonials.component.scss
@@ -1,90 +1,92 @@
-.testimonials {
-  width: 100%;
-  overflow: auto;
-  //   background-color: orange;
-  mat-icon {
-    font-size: 70pt;
-    color: rgba($color: #000000, $alpha: 0.1);
-  }
-  .title-card{
-    font-size: 13pt;
-    font-weight: 700;
-  }
-  .title {
-    margin: 0;
-    font-size: 11pt;
-    font-weight: 500;
-    text-align: left;
-  }
-  .description {
-    margin: 10px 0px;
-    font-size: 12pt;
-    font-weight: 400;
-    text-align: left;
-  }
-
-  .content {
-    max-height: 600px;
-    overflow-y: auto;
-    padding-right: 8pt;
-    margin-top: 20pt;
-
-    &::-webkit-scrollbar {
-      width: 7px;
+:host {
+  .testimonials {
+    width: 100%;
+    overflow: auto;
+    //   background-color: orange;
+    mat-icon {
+      font-size: 70pt;
+      color: rgba($color: #000000, $alpha: 0.1);
     }
-    &::-webkit-scrollbar-track {
-      background: #d9d9d9;
+    .title-card {
+      font-size: 13pt;
+      font-weight: 700;
     }
-    &::-webkit-scrollbar-thumb {
-      background: #bcbcbc;
-      border-radius: 5px;
+    .title {
+      margin: 0;
+      font-size: 11pt;
+      font-weight: 500;
+      text-align: left;
     }
-    &::-webkit-scrollbar-thumb:hover {
-      background: #a5a5a5;
+    .description {
+      margin: 10px 0px;
+      font-size: 12pt;
+      font-weight: 400;
+      text-align: left;
     }
 
-    .testimonial-item {
-      padding: 0;
-      display: flex;
-      height: 100px;
-      overflow: hidden;
-      margin-bottom: 9pt;
+    .content {
+      max-height: 600px;
+      overflow-y: auto;
+      padding-right: 8pt;
+      margin-top: 20pt;
 
-      .leading {
-        width: 20%;
-
-        img {
-          width: 100%;
-          height: 100%;
-          object-fit: cover;
-        }
+      &::-webkit-scrollbar {
+        width: 7px;
+      }
+      &::-webkit-scrollbar-track {
+        background: #d9d9d9;
+      }
+      &::-webkit-scrollbar-thumb {
+        background: #bcbcbc;
+        border-radius: 5px;
+      }
+      &::-webkit-scrollbar-thumb:hover {
+        background: #a5a5a5;
       }
 
-      .info {
-        width: 80%;
-        padding: 10pt;
+      .testimonial-item {
+        padding: 0;
         display: flex;
-        align-items: flex-start;
-        justify-content: center;
-        flex-direction: column;
-        margin-left: 20px;
-        
-        .about {
-          display: flex;
-          align-items: center;
-          margin: 0;
-          margin-top: 10pt;
-          .avatar {
-            margin: 0;
-            width: 18pt;
-            height: 18pt;
-            border-radius: 50%;
-          }
+        height: 100px;
+        overflow: hidden;
+        margin-bottom: 9pt;
 
-          p {
-            color: #b3b3b3;
-            font-size: 10pt;
-            margin-left: 10pt;
+        .leading {
+          width: 20%;
+
+          img {
+            width: 100%;
+            height: 100%;
+            object-fit: cover;
+          }
+        }
+
+        .info {
+          width: 80%;
+          padding: 10pt;
+          display: flex;
+          align-items: flex-start;
+          justify-content: center;
+          flex-direction: column;
+          margin-left: 20px;
+
+          .about {
+            display: flex;
+            align-items: center;
+            margin: 0;
+            margin-top: 10pt;
+            .avatar {
+              margin: 0;
+              width: 18pt;
+              height: 18pt;
+              border-radius: 50%;
+            }
+
+            p {
+              color: #b3b3b3;
+              font-size: 10pt;
+              margin-left: 10pt;
+            }
           }
         }
       }
