--- a/src/app/public-documents/solution/solution.component.scss
+++ b/src/app/public-documents/solution/solution.component.scss
@@ -1,308 +1,309 @@
-.container {
-  margin: 120px 40px;
-  margin-bottom: 100px;
+:host {
+  .container {
+    margin: 120px 40px;
+    margin-bottom: 100px;
 
-  .main-box {
-    background-color: white;
-  }
+    .main-box {
+      background-color: white;
+    }
 
-  .container-titles {
-    background-color: white;
-    .title {
-      // display: flex;
+    .container-titles {
+      background-color: white;
+      .title {
+        // display: flex;
 
-      // align-items: flex-start;
+        // align-items: flex-start;
+        p {
+          margin-left: 18%;
+          font-size: 14px;
+          font-weight: 500;
+          margin-top: 10px;
+        }
+        img {
+          position: absolute;
+          margin-left: 5px;
+        }
+      }
+    }
+
+    .actions-box {
+      position: absolute;
+      bottom: 20px;
+      // background-color: red;
       p {
-        margin-left: 18%;
+        font-size: 14px;
+      }
+      .title {
         font-size: 14px;
         font-weight: 500;
-        margin-top: 10px;
-      }
-      img {
-        position: absolute;
-        margin-left: 5px;
-      }
-    }
-  }
-
-  .actions-box {
-    position: absolute;
-    bottom: 20px;
-    // background-color: red;
-    p {
-      font-size: 14px;
-    }
-    .title {
-      font-size: 14px;
-      font-weight: 500;
-      color: white;
-    }
-    .value {
-      color: white;
-
-      font-size: 20px;
-      font-weight: 800;
-    }
-    .vote-button {
-      margin-top: 10px;
-      background-color: #306eff;
-      padding: 6px 50px;
-      border-radius: 4px;
-      color: white;
-      font-size: 14px;
-      font-weight: 500;
-    }
-  }
-
-  .testimony-box {
-    min-height: 600px;
-    overflow-y: scroll;
-    // background-color: red;
-  }
-  .users-container {
-    p {
-      font-size: 14px;
-      font-weight: 500;
-    }
-  }
-  .featured-users {
-    height: min-content;
-  }
-  .doc-description {
-    height: 280px;
-    padding: 0 !important;
-  }
-  .card-item {
-    background-color: white;
-    border-radius: 6px;
-    box-shadow: 0px 2px 1px -1px rgb(0 0 0 / 20%),
-      0px 1px 1px 0px rgb(0 0 0 / 14%), 0px 1px 3px 0px rgb(0 0 0 / 12%);
-
-    .title {
-      font-size: 14px;
-      font-weight: 600;
-    }
-    .image {
-      width: 20px;
-      height: 20px;
-      border-radius: 100%;
-    }
-    .description {
-      margin-top: 10px;
-      font-size: 14px;
-    }
-    .date {
-      margin-top: 10px;
-      font-size: 12px;
-    }
-  }
-
-  .imghldr {
-    // min-height: 150px;
-    // display: flex;
-    // align-items: center;
-
-    // justify-content: center;
-    // background: rgba($color: #ceddff, $alpha: 0.4);
-    // border-bottom: 1px solid rgba($color: #000000, $alpha: 0.05);
-
-    mat-icon {
-      font-size: 70pt;
-      color: rgba($color: #000000, $alpha: 0.1);
-    }
-    img {
-      width: 230px;
-      // height: 300px;
-      height: 280px;
-      object-fit: cover;
-    }
-  }
-
-  .infohldr {
-    padding: 5px 40px;
-  }
-
-  .card-title {
-    color: #636363;
-    font-weight: 600;
-    font-size: 18px;
-    line-height: 30px;
-    // text-transform: uppercase;
-    color: #000000;
-    margin-bottom: 10px;
-    // letter-spacing: 0.5px;
-    margin-top: 15px;
-  }
-
-  .card-description {
-    font-weight: 400;
-    font-size: 14px;
-    text-align: justify;
-    color: #636363;
-    margin-bottom: 8px;
-
-    &.link {
-      display: inline-block;
-      text-decoration: underline;
-      font-size: 12px;
-      cursor: pointer;
-    }
-  }
-
-  table {
-    width: 100%;
-    box-shadow: none !important;
-    padding: 0px 10px;
-    padding-bottom: 50px;
-  }
-  .header-buttons {
-    padding: 0px 30px;
-    display: flex;
-    align-items: center;
-    justify-content: center;
-
-    .button-box {
-      width: 80px;
-      text-align: center;
-      .add-button {
         color: white;
       }
-      .green {
-        background-color: #20c588;
+      .value {
+        color: white;
+
+        font-size: 20px;
+        font-weight: 800;
       }
-      .purple {
-        background-color: #9747ff;
-      }
-      p {
-        text-align: center;
-        font-size: 13px;
+      .vote-button {
+        margin-top: 10px;
+        background-color: #306eff;
+        padding: 6px 50px;
+        border-radius: 4px;
+        color: white;
+        font-size: 14px;
         font-weight: 500;
       }
     }
-  }
 
-  .header-card{
-    mat-card {
-      padding: 0;
-      display: flex;
-      min-height: 250px;
-    
-      .image-box {
-        width: 40%;
-        position: relative;
-        margin: 0;
-    
-        img {
-          width: 100%;
-          height: 100%;
-          filter: brightness(70%);
-        }
-    
-        .info {
-          position: absolute;
-          bottom: 0;
-          width: 100%;
-          display: flex;
-          justify-content: center;
-          align-items: center;
-          padding: 15pt 10pt;
-    
-          .custom-circle {
-            width: 55pt;
-            height: 55pt;
-            border-radius: 50%;
-            border: 2px solid #fff;
-            background-color: #ceddff;
-            cursor: auto;
-            margin: 0;
-            margin-right: 20pt;
-    
-            mat-icon {
-              color: #306eff;
-              font-size: 22pt;
-            }
-          }
-    
-          .actions {
-            margin: 0;
-            p {
-              font-size: 12pt;
-              color: #fff;
-              font-weight: 800;
-              text-shadow: 0 0 4px #919191;
-            }
-    
-            button {
-              width: 100%;
-              margin-top: 8pt;
-            }
-            
-            .votes{
-              margin-top: 4px;
-              font-size: 28pt;
-              font-weight: bold;
-            }
-          }
-        }
+    .testimony-box {
+      min-height: 600px;
+      overflow-y: scroll;
+      // background-color: red;
+    }
+    .users-container {
+      p {
+        font-size: 14px;
+        font-weight: 500;
       }
-    
-      .data-box {
-        width: 60%;
-        padding: 30px 30px;
-    
-        .title {
-          font-size: 14pt;
-          margin-bottom: 12pt;
-          font-weight: 700;
+    }
+    .featured-users {
+      height: min-content;
+    }
+    .doc-description {
+      height: 280px;
+      padding: 0 !important;
+    }
+    .card-item {
+      background-color: white;
+      border-radius: 6px;
+      box-shadow: 0px 2px 1px -1px rgb(0 0 0 / 20%),
+        0px 1px 1px 0px rgb(0 0 0 / 14%), 0px 1px 3px 0px rgb(0 0 0 / 12%);
+
+      .title {
+        font-size: 14px;
+        font-weight: 600;
+      }
+      .image {
+        width: 20px;
+        height: 20px;
+        border-radius: 100%;
+      }
+      .description {
+        margin-top: 10px;
+        font-size: 14px;
+      }
+      .date {
+        margin-top: 10px;
+        font-size: 12px;
+      }
+    }
+
+    .imghldr {
+      // min-height: 150px;
+      // display: flex;
+      // align-items: center;
+
+      // justify-content: center;
+      // background: rgba($color: #ceddff, $alpha: 0.4);
+      // border-bottom: 1px solid rgba($color: #000000, $alpha: 0.05);
+
+      mat-icon {
+        font-size: 70pt;
+        color: rgba($color: #000000, $alpha: 0.1);
+      }
+      img {
+        width: 230px;
+        // height: 300px;
+        height: 280px;
+        object-fit: cover;
+      }
+    }
+
+    .infohldr {
+      padding: 5px 40px;
+    }
+
+    .card-title {
+      color: #636363;
+      font-weight: 600;
+      font-size: 18px;
+      line-height: 30px;
+      // text-transform: uppercase;
+      color: #000000;
+      margin-bottom: 10px;
+      // letter-spacing: 0.5px;
+      margin-top: 15px;
+    }
+
+    .card-description {
+      font-weight: 400;
+      font-size: 14px;
+      text-align: justify;
+      color: #636363;
+      margin-bottom: 8px;
+
+      &.link {
+        display: inline-block;
+        text-decoration: underline;
+        font-size: 12px;
+        cursor: pointer;
+      }
+    }
+
+    table {
+      width: 100%;
+      box-shadow: none !important;
+      padding: 0px 10px;
+      padding-bottom: 50px;
+    }
+    .header-buttons {
+      padding: 0px 30px;
+      display: flex;
+      align-items: center;
+      justify-content: center;
+
+      .button-box {
+        width: 80px;
+        text-align: center;
+        .add-button {
+          color: white;
         }
-    
-        .short-description {
-          color: #636363;
-          font-size: 11pt;
-          line-height: 19pt;
+        .green {
+          background-color: #20c588;
         }
-    
-        .show-more {
-          display: block;
-          margin-top: 20pt;
-          text-decoration: underline;
-          color: #306eff;
+        .purple {
+          background-color: #9747ff;
+        }
+        p {
+          text-align: center;
+          font-size: 13px;
+          font-weight: 500;
         }
       }
     }
-    
+
+    .header-card {
+      mat-card {
+        padding: 0;
+        display: flex;
+        min-height: 250px;
+
+        .image-box {
+          width: 40%;
+          position: relative;
+          margin: 0;
+
+          img {
+            width: 100%;
+            height: 100%;
+            filter: brightness(70%);
+          }
+
+          .info {
+            position: absolute;
+            bottom: 0;
+            width: 100%;
+            display: flex;
+            justify-content: center;
+            align-items: center;
+            padding: 15pt 10pt;
+
+            .custom-circle {
+              width: 55pt;
+              height: 55pt;
+              border-radius: 50%;
+              border: 2px solid #fff;
+              background-color: #ceddff;
+              cursor: auto;
+              margin: 0;
+              margin-right: 20pt;
+
+              mat-icon {
+                color: #306eff;
+                font-size: 22pt;
+              }
+            }
+
+            .actions {
+              margin: 0;
+              p {
+                font-size: 12pt;
+                color: #fff;
+                font-weight: 800;
+                text-shadow: 0 0 4px #919191;
+              }
+
+              button {
+                width: 100%;
+                margin-top: 8pt;
+              }
+
+              .votes {
+                margin-top: 4px;
+                font-size: 28pt;
+                font-weight: bold;
+              }
+            }
+          }
+        }
+
+        .data-box {
+          width: 60%;
+          padding: 30px 30px;
+
+          .title {
+            font-size: 14pt;
+            margin-bottom: 12pt;
+            font-weight: 700;
+          }
+
+          .short-description {
+            color: #636363;
+            font-size: 11pt;
+            line-height: 19pt;
+          }
+
+          .show-more {
+            display: block;
+            margin-top: 20pt;
+            text-decoration: underline;
+            color: #306eff;
+          }
+        }
+      }
+    }
   }
-}
 
-*::-webkit-scrollbar {
-  width: 6px;
-  height: 6px;
-}
-
-*::-webkit-scrollbar-track {
-  background: rgb(230, 230, 230);
-}
-
-*::-webkit-scrollbar-thumb {
-  background-color: rgb(131, 131, 131);
-  border-radius: 20px;
-  height: 2px;
-}
-
-.loading {
-  mat-spinner {
-    position: absolute;
-    top: 50%;
-    left: 50%;
-    transform: translate(-50%, -50%);
+  *::-webkit-scrollbar {
+    width: 6px;
+    height: 6px;
   }
-}
 
-button.mini {
-  margin-left: 20px;
+  *::-webkit-scrollbar-track {
+    background: rgb(230, 230, 230);
+  }
 
-  mat-icon {
-    font-size: 14pt !important;
-    color: #fff;
+  *::-webkit-scrollbar-thumb {
+    background-color: rgb(131, 131, 131);
+    border-radius: 20px;
+    height: 2px;
+  }
+
+  .loading {
+    mat-spinner {
+      position: absolute;
+      top: 50%;
+      left: 50%;
+      transform: translate(-50%, -50%);
+    }
+  }
+
+  button.mini {
+    margin-left: 20px;
+
+    mat-icon {
+      font-size: 14pt !important;
+      color: #fff;
+    }
   }
 }
