--- a/src/app/public-documents/category/category.component.html
+++ b/src/app/public-documents/category/category.component.html
@@ -51,7 +51,7 @@
             <expanded-text
               [text]="selectedCategory.description"
               [minLength]="200"
-              [title]="selectedCategory.category.name"
+              [title]="selectedCategoryTitle"
             ></expanded-text>
           </div>
         </mat-card>
