--- a/src/app/components/add-document-testimony/add-document-testimony.component.html
+++ b/src/app/components/add-document-testimony/add-document-testimony.component.html
@@ -31,7 +31,7 @@
         ></textarea>
       </mat-form-field>
 
-      <div class="imagebox">
+      <!-- <div class="imagebox">
         <label [ngClass]="imageUrl ? 'data' : 'empty'">
           <mat-icon>photo_camera</mat-icon>
           <span>Subir imagen</span>
@@ -49,7 +49,7 @@
           alt="img_upload"
           [ngClass]="imageUrl ? 'data' : 'empty'"
         />
-      </div>
+      </div> -->
     </div>
     <div class="messageError">
       <span *ngIf="messageError" class="messageError">Titulo y descripción son requeridos.</span>
