--- a/src/app/public-documents/category/category.component.html
+++ b/src/app/public-documents/category/category.component.html
@@ -72,7 +72,7 @@
           <mat-form-field appearance="outline">
             <mat-label>Cobertura</mat-label>
             <mat-select>
-              <mat-option value="all"> <small>nacional</small></mat-option>
+              <mat-option value="all"> <small>Nacional</small></mat-option>
               <mat-option
                 *ngFor="let location of coverage"
                 value="location.name"
