--- a/src/app/public-documents/topic/topic.component.html
+++ b/src/app/public-documents/topic/topic.component.html
@@ -26,7 +26,7 @@
               )
             "
           >
-            {{ category.category.name }}
+            {{ titles[1] }}
           </li>
           <li
           [matTooltip]="subcategory.category.name" matTooltipClass="tooltip"
@@ -41,7 +41,7 @@
               )
             "
           >
-            {{ subcategory.category.name }}
+            {{ titles[2] }}
           </li>
           <li
           [matTooltip]="topic.shortTitle" matTooltipClass="tooltip"
