--- a/src/app/public-documents/category/category.component.html
+++ b/src/app/public-documents/category/category.component.html
@@ -10,12 +10,12 @@
         *ngIf="!!document.title; else noTitle"
         (click)="utilityService.linkMe('/documentos-publicos/' + document._id)"
       >
-        {{ document.title }}
+        {{ titles[0] }}
       </li>
       <ng-template #noTitle>
         <div>categoria</div>
       </ng-template>
-      <li>{{ selectedCategory.category.name }}</li>
+      <li>{{ titles[1] }}</li>
     </breadcrumbs-component>
     <div class="set-12 txt-left" style="margin-bottom: 10px">
       <span class="created-by">
@@ -46,12 +46,12 @@
 
           <div class="set-12 infohldr">
             <p class="set-12 card-title">
-              {{ selectedCategoryTitle }}
+              {{ selectedCategory.category.name }}
             </p>
             <expanded-text
               [text]="selectedCategory.description"
               [minLength]="200"
-              [title]="selectedCategoryTitle"
+              [title]="selectedCategory.category.name"
             ></expanded-text>
           </div>
         </mat-card>
