--- a/src/app/public-documents/subcategory/subcategory.component.html
+++ b/src/app/public-documents/subcategory/subcategory.component.html
@@ -13,7 +13,7 @@
               utilityService.linkMe('/documentos-publicos/' + document._id)
             "
           >
-            {{ document.title }}
+            {{ titles[0] }}
           </li>
           <li
             (click)="
@@ -25,9 +25,9 @@
               )
             "
           >
-            {{ category.category.name }}
+            {{ titles[1] }}
           </li>
-          <li>{{ subcategory.category.name }}</li>
+          <li>{{ titles[2] }}</li>
         </breadcrumbs-component>
       </div>
       <!-- <div class="set-4 featured-users">
@@ -54,11 +54,11 @@
             </div>
           </div>
           <div class="set-12 infohldr">
-            <p class="set-12 card-title">{{ subCategoryTitle }}</p>
+            <p class="set-12 card-title">{{ subcategory.category.name }}</p>
             <expanded-text
               [text]="subcategory.description"
               [minLength]="200"
-              [title]="subCategoryTitle"
+              [title]="subcategory.category.name"
             ></expanded-text>
           </div>
         </mat-card>
