global architecture fixes

--- a/src/app/components/add-comments/add-comments.component.html
+++ b/src/app/components/add-comments/add-comments.component.html
@@ -11,10 +11,12 @@
     </mat-form-field>
 
     <div class="set-12 ctrls">
-      <button type="button" mat-raised-button color="accent" (click)="killDialog()"
-        [disabled]="submitted">Cancelar</button>
-      <button type="submit" mat-raised-button color="primary"
-        [disabled]="commentFormGroup.invalid || submitted">Comentar</button>
+      <button type="button" mat-raised-button color="accent" (click)="killDialog()" [disabled]="submitted">
+        <small>Cancelar</small>
+      </button>
+      <button type="submit" mat-raised-button color="primary" [disabled]="commentFormGroup.invalid || submitted">
+        <small>Comentar</small>
+      </button>
       <mat-spinner diameter="20" *ngIf="submitted"></mat-spinner>
     </div>
   </form>
