--- a/src/app/components/app-pagelet/app-pagelet.component.scss
+++ b/src/app/components/app-pagelet/app-pagelet.component.scss
@@ -8,7 +8,7 @@
     padding: 0 40px;
     // background: rgba($color: #ffffff, $alpha: 0.9);
     background: rgb(0, 3, 29);
-    background: linear-gradient(360deg, rgba(0, 3, 29, 0) 0%, rgba(0, 3, 29, 0.75) 100%);
+    // background: linear-gradient(360deg, rgba(0, 3, 29, 0) 0%, rgba(0, 3, 29, 0.75) 100%);
     box-shadow: 0;
     // background: transparent;
     position: fixed;
