--- a/src/app/components/image-viewer/image-viewer.component.html
+++ b/src/app/components/image-viewer/image-viewer.component.html
@@ -47,7 +47,7 @@
 </div>
 
 <div class="set-12 dialog-body" *ngIf="isDataAvailable">
-  <mat-toolbar color="primary">
+  <mat-toolbar color="warn">
     <span class="example-spacer"></span>
     <button mat-icon-button (click)="killDialog()" matTooltip="Salir" matTooltipClass="tooltip">
       <mat-icon>cancel</mat-icon>
