--- a/src/app/dashboard/dashboard.component.scss
+++ b/src/app/dashboard/dashboard.component.scss
@@ -1,7 +1,8 @@
 :host {
   width: 100%;
   height: 100%;
-  // padding-top: 80px;
+  padding-top: 80px;
+  background: #00031d;
 
   .ds-page {
     width: 100%;
