--- a/src/app/documents/single-document/single-document.component.html
+++ b/src/app/documents/single-document/single-document.component.html
@@ -298,7 +298,7 @@
                     <mat-icon>exit_to_app</mat-icon>
                     <small>Mover</small>
                   </button>
-                  <button mat-menu-item>
+                  <button mat-menu-item (click)="killLayout(element)">
                     <mat-icon>delete</mat-icon>
                     <small>Eliminar</small>
                   </button>
