--- a/src/app/components/add-document-collaborator/add-document-collaborator.component.scss
+++ b/src/app/components/add-document-collaborator/add-document-collaborator.component.scss
@@ -27,7 +27,11 @@
       }
 
       button {
-        margin-right: 20px;
+        margin-right: 10px;
+      }
+
+      mat-spinner {
+        margin-left: 20px;
       }
     }
   }
