--- a/src/app/components/edit-document-data/edit-document-data.component.html
+++ b/src/app/components/edit-document-data/edit-document-data.component.html
@@ -4,7 +4,8 @@
 
 <div class="set-12" *ngIf="isDataAvailable">
   <div class="set-12 dialog-head">
-    <div class="set-9">
+    <h3>{{document.title}}</h3>
+    <!-- <div class="set-9">
       <h3>{{document.title}}</h3>
     </div>
 
@@ -13,7 +14,7 @@
         matTooltip="Cerrar" matTooltipClass="tooltip">
         <mat-icon>cancel</mat-icon>
       </button>
-    </div>
+    </div> -->
   </div>
 
   <div class="set-12 dialog-body">
@@ -29,8 +30,12 @@
       </mat-form-field>
 
       <div class="set-12 ctrls">
-        <button type="submit" mat-raised-button color="primary"
-          [disabled]="formGroup.invalid || submitted">Guardar</button>
+        <button type="button" mat-raised-button color="accent" [disabled]="submitted" (click)="killDialog()">
+          <small>Cancelar</small>
+        </button>
+        <button type="submit" mat-raised-button color="primary" [disabled]="formGroup.invalid || submitted">
+          <small>Guardar</small>
+        </button>
         <mat-spinner diameter="20" *ngIf="submitted"></mat-spinner>
       </div>
     </form>
