--- a/src/app/components/window-alert/window-alert.component.scss
+++ b/src/app/components/window-alert/window-alert.component.scss
@@ -9,6 +9,10 @@
   .dialog-body {
     margin-top: 20px;
 
+    h1 {
+      margin-top: 5px;
+    }
+
     p {
       text-align: center;
       margin-top: 5px;
@@ -41,7 +45,7 @@
   .loading {
     mat-spinner {
       position: absolute;
-      top: 60%;
+      top: 50%;
       left: 50%;
       transform: translate(-50%, -50%);
     }
