--- a/src/app/documents/single-solution/single-solution.component.html
+++ b/src/app/documents/single-solution/single-solution.component.html
@@ -35,10 +35,10 @@
     <div class="set-3 col-left">
       <mat-card class="set-12 doc-description">
         <div class="set-12 imghldr">
-          <mat-icon *ngIf="solution.images.length == 0">panorama</mat-icon>
+          <mat-icon class="pano" *ngIf="solution.images.length == 0">panorama</mat-icon>
           <slider-images [images]="solution.images" *ngIf="solution.images.length != 0"></slider-images>
           <div class="overlay">
-            <mat-icon>photo_camera</mat-icon>
+            <mat-icon color="accent">photo_camera</mat-icon>
             <div class="cover"></div>
           </div>
         </div>
