--- a/src/app/documents/single-solution/single-solution.component.scss
+++ b/src/app/documents/single-solution/single-solution.component.scss
@@ -27,7 +27,7 @@
     border-bottom: 1px solid rgba($color: #000000, $alpha: 0.05);
     overflow: hidden;
 
-    mat-icon {
+    mat-icon.pano {
       font-size: 70pt;
       color: rgba($color: #000000, $alpha: 0.1);
     }
