--- a/src/app/documents/single-theme/single-theme.component.html
+++ b/src/app/documents/single-theme/single-theme.component.html
@@ -32,10 +32,10 @@
     <div class="set-3 col-lft">
       <mat-card class="set-12 doc-description">
         <div class="set-12 imghldr">
-          <mat-icon *ngIf="topic.images.length == 0">panorama</mat-icon>
+          <mat-icon class="pano" *ngIf="topic.images.length == 0">panorama</mat-icon>
           <img [src]="topic.images[0]" alt="" *ngIf="topic.images.length != 0">
           <div class="overlay" (click)="popImageViewer()">
-            <mat-icon>photo_camera</mat-icon>
+            <mat-icon color="accent">photo_camera</mat-icon>
             <div class="cover"></div>
           </div>
         </div>
@@ -123,7 +123,8 @@
           <ng-container matColumnDef="title">
             <th mat-header-cell *matHeaderCellDef></th>
             <td mat-cell *matCellDef="let element">
-              <button type="button" class="catbtn" (click)="linkSolution(element._id)">
+              <button type="button" class="catbtn"
+                (click)="linkMe('/documentos/' + document._id + '/categoria/' + categoryID + '/subcategoria/' + subcategoryID + '/temas/' + topic._id + '/solucion/' + element._id)">
                 <small>{{ element.title }}</small>
               </button>
             </td>
@@ -147,6 +148,47 @@
             <th mat-header-cell *matHeaderCellDef>Interacciones</th>
             <td mat-cell *matCellDef="let element">
               <small>{{ 0 || 'NA' }}</small>
+            </td>
+          </ng-container>
+
+          <ng-container matColumnDef="menu">
+            <th mat-header-cell *matHeaderCellDef>&nbsp;</th>
+            <td mat-cell *matCellDef="let element">
+              <button mat-icon-button [matMenuTriggerFor]="menu">
+                <mat-icon>more_vert</mat-icon>
+              </button>
+              <mat-menu #menu="matMenu">
+                <button mat-menu-item
+                  (click)="linkMe('/documentos-publicos/' + document._id + '/categoria/' + categoryID + '/subcategoria/' + subcategoryID + '/tema/' + topic._id + '/solucion/' + element._id)">
+                  <mat-icon>groups</mat-icon>
+                  <small>Abrir público</small>
+                </button>
+                <button mat-menu-item
+                  (click)="linkMe('/documentos/' + document._id + '/categoria/' + categoryID + '/subcategoria/' + subcategoryID + '/temas/' + topic._id + '/solucion/' + element._id)">
+                  <mat-icon>lock</mat-icon>
+                  <small>Abrir privado</small>
+                </button>
+                <button mat-menu-item>
+                  <mat-icon>settings</mat-icon>
+                  <small>Editar</small>
+                </button>
+                <button mat-menu-item>
+                  <mat-icon>drag_handle</mat-icon>
+                  <small>Duplicar</small>
+                </button>
+                <button mat-menu-item>
+                  <mat-icon>file_copy</mat-icon>
+                  <small>Copiar</small>
+                </button>
+                <button mat-menu-item>
+                  <mat-icon>exit_to_app</mat-icon>
+                  <small>Mover</small>
+                </button>
+                <button mat-menu-item>
+                  <mat-icon>delete</mat-icon>
+                  <small>Eliminar</small>
+                </button>
+              </mat-menu>
             </td>
           </ng-container>
 
