--- a/src/app/public-documents/components/modal-desciption/modal-desciption.component.scss
+++ b/src/app/public-documents/components/modal-desciption/modal-desciption.component.scss
@@ -2,19 +2,19 @@
   .container {
     width: 600px;
     height: 450px;
+    overflow: hidden;
+    position: relative;
   }
   .header {
-    position: absolute;
-    top: 0px;
-    left: 1px;
-    width: 95%;
-    height: 92px;
+    position: sticky;
+    top: 0;
+    width: 100%;
     background-color: white;
-    padding-bottom: 30px;
     display: flex;
     .title {
+      word-break: break-all;
+      max-width: 400px;
       position: relative;
-      top: 25px;
     }
 
     .button {
@@ -28,7 +28,9 @@
     width: 100%;
     height: 330px;
     line-height: 25px;
-
+    overflow-y: auto;
+    overflow-x: hidden;
+    overflow-wrap: break-word;
     .text {
       padding: 60px;
     }
