--- a/src/app/components/add-document-testimony/add-document-testimony.component.html
+++ b/src/app/components/add-document-testimony/add-document-testimony.component.html
@@ -15,7 +15,10 @@
 </div>
 
 <div class="set-12 dialog-body">
-  <form [formGroup]="addTestimonyFormGroup" (submit)="createTestimony(addTestimonyFormGroup)">
+  <form
+    [formGroup]="addTestimonyFormGroup"
+    (submit)="createTestimony(addTestimonyFormGroup)"
+  >
     <div class="form-body">
       <mat-form-field class="example-full-width" appearance="outline">
         <mat-label>Nombre</mat-label>
@@ -31,7 +34,7 @@
         ></textarea>
       </mat-form-field>
 
-      <div class="imagebox">
+      <!-- <div class="imagebox">
         <label [ngClass]="imageUrl ? 'data' : 'empty'">
           <mat-icon>photo_camera</mat-icon>
           <span>Subir imagen</span>
@@ -49,12 +52,14 @@
           alt="img_upload"
           [ngClass]="imageUrl ? 'data' : 'empty'"
         />
-      </div>
+      </div> -->
     </div>
     <div class="messageError">
-      <span *ngIf="messageError" class="messageError">Titulo y descripción son requeridos.</span>
+      <span *ngIf="messageError" class="messageError"
+        >Titulo y descripción son requeridos.</span
+      >
     </div>
-    
+
     <div class="set-12 ctrls">
       <button
         type="submit"
