--- a/src/app/public-documents/solution/solution.component.html
+++ b/src/app/public-documents/solution/solution.component.html
@@ -181,6 +181,7 @@
       <div class="set-4">
         <public-documents-testimonials
           [data]="solution.testimonials"
+          [image]="image"
         ></public-documents-testimonials>
       </div>
     </div>
