--- a/src/app/public-documents/solution/solution.component.scss
+++ b/src/app/public-documents/solution/solution.component.scss
@@ -1,6 +1,7 @@
 :host {
   .container {
-    margin: 120px 40px;
+    margin: 120px 20px;
+    margin-left: 20px;
     margin-bottom: 100px;
 
     .main-box {
