--- a/src/app/public-documents/components/modal-desciption/modal-desciption.component.scss
+++ b/src/app/public-documents/components/modal-desciption/modal-desciption.component.scss
@@ -15,6 +15,7 @@
       word-break: break-all;
       max-width: 400px;
       position: relative;
+      text-align: center;
     }
 
     .button {
