--- a/src/app/public-documents/components/panel-circles/panel-circles.component.scss
+++ b/src/app/public-documents/components/panel-circles/panel-circles.component.scss
@@ -18,7 +18,7 @@
       //71f5ad
       align-items: center;
       overflow-y: hidden;
-      overflow-x: auto;
+      overflow-x: hidden;
 
       .align {
         height: 100%;
