--- a/src/app/public-documents/solution/solution.component.html
+++ b/src/app/public-documents/solution/solution.component.html
@@ -113,17 +113,12 @@
             <!-- IMAGE -->
             <div class="set-12 image-box">
               <mat-icon *ngIf="!image">panorama</mat-icon>
-              <img *ngIf="image" [src]="image" alt="" (click)="popImageViewer()"/>
-
-              <slider-images
-              [images]="solution.image"
-              *ngIf="solution.images.length != 0"
-            ></slider-images>
-            <div class="overlay">
-              <mat-icon>photo_camera</mat-icon>
-              <div class="cover"></div>
-            </div>
-
+              <img
+                *ngIf="image"
+                [src]="image"
+                style="cursor: pointer"
+                (click)="popImageViewer()"
+              />
               <div class="info">
                 <button class="custom-circle">
                   <mat-icon>thumb_up</mat-icon>
